# StemSplitter

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  config.py  config.yaml  config_loader.py  context.txt  demucs_test.py  main.py  pyproject.toml  pytest.ini  ray_test.py  requirements.txt  test_gcs.py
backend/api/: separate.py
backend/infra/: config.py  credential_manager.py  demucs_model.py  ffmpeg_processor.py  file_repo.py  job_queue.py
backend/model/: htdemucs.py
backend/services/: audio_preprocessing_service.py  audio_separation_service.py  file_storage_service.py  model_service.py
backend/tests/: conftest.py
backend/tests/e2e/: test_separate_stream.py
backend/tests/e2e/assets/: DefaultSet.m4a  convert_file_types.py  test_audio.aif  test_audio.flac  test_audio.m4a
backend/tests/utils/: audio.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: audio-splitter.tsx
