[project]
name = "stemsplitter-backend"
version = "1.0.0"
description = "FastAPI backend for StemSplitter audio source separation."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "demucs==4.0.0",
    "fastapi>=0.115,<1",
    "numpy>=1.24,<2",
    "pydantic>=2.8,<3",
    "python-dotenv>=1,<2",
    "python-multipart>=0.0.12,<1",
    "pyyaml>=6,<7",
    "soundfile>=0.12,<1",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[tool.uv]
package = false
